--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
       </li>
     </ul>    
     <!-- toggle button -->
-    <div class="togglebutton-wrapper" [class.togglebutton-checked]="isactive">
+    <div class="togglebutton-wrapper" [class.togglebutton-checked]="sortByStatus">
       <label for="todosort">
         <span class="togglebutton-label">Move done items at the end?</span>
         <span class="tooglebutton-box"></span>
