added form add todo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,12 +32,5 @@
 
 
   <!-- <p v-else class="emptylist">Your todo list is empty.</p> -->
-  
-
-  <!-- Форма добавления --> 
-  <form name="newform">
-    <label for="newitem">Add to the todo list</label>
-    <input type="text" name="newitem" id="newitem" >
-    <button type="submit">Add item</button>
-  </form>
+  <add-form></add-form>
 </main>
